fix service typicode
